# rust_started

./: .gitignore  Cargo.toml  commands.txt  readme.md  readme.txt
docs/: unused.txt
draft/src/: bst.rs  main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_world/: Cargo.toml  build.rs  c_add.c
hello_world/src/: lib.rs  main.rs
http_server/: Cargo.toml
http_server/src/: lib.rs  main.rs
minigrep/src/: main.rs
part10_generics/: Cargo.toml
part10_generics/src/: generic_start.rs  generics_usage.rs  hash_usage.rs  lifecycle_readme.md  lifecycle_usage.rs  lifetimes.rs  main.rs  struct_trait_usage.rs  trait_usage.rs
part11_adder/: Cargo.toml
part11_adder/src/: lib.rs
part11_with_test/: Cargo.toml
part12_minigrep/: Cargo.toml
part12_minigrep/src/: main.rs
part13_closures_iterators/: Cargo.toml  readme.md
part13_closures_iterators/src/: closures_usage.rs  fn_fnmut_fnonce.rs  iterators_usage.rs  main.rs
part13_functional_features/: Cargo.toml
part13_functional_features/src/: closures.rs  iterator.rs  main.rs
part15_smart_pointer/: Cargo.toml  readme.md
part15_smart_pointer/src/: main.rs  use_box.rs  use_drop_trait.rs  use_rc.rs  use_refcell.rs
part16_concurrency/: Cargo.toml
part16_concurrency/src/: main.rs  use_channel.rs  use_mutex.rs  use_spawn.rs
part17_async/: Cargo.toml
part17_async/src/: main.rs  use_async.rs
part18_oop/: Cargo.toml
part18_oop/src/: design_with_oop.rs  main.rs  use_trait_object.rs
part20_adv_features/: Cargo.toml
part20_adv_features/src/: advance_trait.rs  advance_types.rs  main.rs  unsafe_rust.rs
part3_basic/: Cargo.toml  数据类型.txt
part3_basic/src/: control_flow.rs  data_types.rs  double_linked_list.rs  double_linked_list_with_unsafe.rs  functions.rs  main.rs  variables.rs
part4_ownership/: Cargo.toml  readme.md  readme.txt
part4_ownership/src/: borrow_and_reference.rs  copy_move_example.rs  drop_example.rs  main.rs  ownership.rs  ownership_definition.rs  references_and_borrowing.rs  slice.rs  slice_usage.rs
part5_struct/: Cargo.toml
part5_struct/src/: define.rs  definition_struct.rs  demo.rs  example_struct.rs  main.rs  struct_function.rs
part6_enum/: Cargo.toml
part6_enum/src/: define.rs  definition_enum.rs  if_let_usage.rs  main.rs  match_usage.rs  pattern_syntax.rs
part7_manage_project/: Cargo.toml  readme.txt
part7_manage_project/src/: main.rs  mod2.rs
part7_packages/: Cargo.toml  readme.md
part7_packages/src/: lib.rs  main.rs
part8_collections/: Cargo.toml
part8_collections/src/: hash_map_usage.rs  hashmap_usage.rs  main.rs  redis_usage.rs  string_usage.rs  vector_usage.rs
part9_error_handle/: Cargo.toml  readme.md
sip_hash/: Cargo.toml
sip_hash/src/: main.rs  sip.rs
siphasher/: Cargo.toml
siphasher/src/: lib.rs  main.rs  sip.rs  sip128.rs  tests.rs
(+6 files in other folders)
