[workspace]

resolver = "3"

members = [
    "hello_world",
    "guessing_game",
    "part3_basic",
    "part4_ownership",
    "part5_struct",
    "part6_enum",
    "part7_packages",
    "part8_collections",
    "part9_error_handle",
    "part10_generics",
    "part11_with_test",
    "part12_minigrep",
    "part13_closures_iterators",
    "part15_smart_pointer",
]

default-members = [
    "part15_smart_pointer"
]

[profile.release]
lto = true
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 0
