[package]
name = "sip_hash"
keywords = ["crypto", "hash", "siphash"]
description = "SipHash-2-4, SipHash-1-3 and 128-bit variants in pure Rust"
readme = "README.md"
version = "0.1.0"
categories = ["algorithms", "cryptography"]
edition = "2021"


[profile.release]
lto = true
panic = "abort"
opt-level = 3

[dependencies]
#  通过启用 "derive" 特性，你可以使用 #[derive(Serialize, Deserialize)] 来自动生成实现这些 trait 的代码。
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }


#  cargo build --features serde
[features]
default = ["std"]
serde_std = ["std", "serde/std"]
serde_no_std = ["serde/alloc"]
std = []
