[package]
name = "siphasher"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["std"]
serde_std = ["std", "serde/std"]
serde_no_std = ["serde/alloc"]
std = []
